<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="media_library_tab">Media Library</string>
    <string name="search_tab">Search</string>
    <string name="settings_tab">Settings</string>
    <string name="settings_dark_theme_item">Dark theme</string>
    <string name="settings_share_app_item">Share the app</string>
    <string name="settings_support_item">Write to support</string>
    <string name="settings_user_agreement_item">User Agreement</string>
    <string name="app_link" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="app_share_msg">Share Playlist Maker app</string>
    <string name="email_support_title">Message to the developers of the Playlist Maker app</string>
    <string name="email_support_msg">Thanks to the developers for a cool app!</string>
    <string name="email" translatable="false">putin@kremlin.ru</string>
    <string name="user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">@string/search_tab</string>
    <string name="ic_clear_description">Icon for clearing search query text</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="album_cover_description">Album cover</string>
    <string name="playlist_cover_description">Playlist cover</string>
    <string name="track_selector_description">Action selection button</string>
    <string name="search_update_result">Update</string>
    <string name="search_placeholder_not_found">Nothing was found</string>
    <string name="search_placeholder_network_error">Network problems\n\nDownload failed. Check the Internet connection.</string>
    <string name="search_history_title">You searched</string>
    <string name="search_history_clear_button">Clear history</string>
    <string name="server_error">Server error</string>
    <string name="player_track_duration">Track time</string>
    <string name="player_album_name">Album</string>
    <string name="player_year_of_track_release">Year</string>
    <string name="player_music_genre">Genre</string>
    <string name="player_country_of_performer">Country</string>
    <string name="player_no_internet_connection_toast">@string/no_internet_connection</string>
    <string name="track_playlist_button_description">Button to add a track to a playlist</string>
    <string name="track_favorites_button_description">Button to add a track to favorites</string>
    <string name="track_play_button_description">Play or pause button</string>
    <string name="player_error_exception_toast">Error preparing player for playback</string>
    <string name="player_error_unknown_toast">Unknown error of the player</string>
    <string name="media_favorite_tab">Favorites</string>
    <string name="media_playlists_tab">Playlists</string>
    <string name="media_tab_layout_description">Tabs for selecting favorite tracks or playlists</string>
    <string name="media_favorite_tab_empty">Your media library is empty</string>
    <string name="media_playlists_tab_empty">You have not\n created any playlists</string>
    <string name="media_add_playlist_button">New Playlist</string>
    <string name="add_new_playlist_title">@string/media_add_playlist_button</string>
    <string name="new_playlist_name">Name*</string>
    <string name="new_playlist_description">Description</string>
    <string name="new_playlist_create_button">Create</string>
    <string name="new_playlist_created_message">Playlist \"%s\" created</string>
    <string name="new_playlist_exit_confirmation_title">Finalize playlist creation?</string>
    <string name="edit_playlist_title">Edit Playlist</string>
    <string name="edit_playlist_save_button">Save</string>
    <string name="edit_playlist_remove_cover_title">Remove Cover</string>
    <string name="edit_playlist_remove_cover_message">Are you sure you want to remove this playlist cover?</string>
    <string name="edit_playlist_saved_message">Playlist successfully updated</string>
    <string name="edit_playlist_exit_confirmation_title">Finalize playlist editing?</string>
    <string name="playlist_title">Playlist</string>
    <string name="playlist_more_share_item">Share</string>
    <string name="playlist_more_edit_item">Edit info</string>
    <string name="playlist_more_delete_item">Delete playlist</string>
    <string name="playlist_delete_playlist_title">@string/playlist_more_delete_item</string>
    <string name="playlist_delete_playlist_message">Do you want to delete the playlist?</string>
    <string name="playlist_delete_track_title">Delete track</string>
    <string name="playlist_delete_track_message">Do you want to delete the track \"%s\"?</string>
    <string name="playlist_cannot_share_empty_playlist_toast">Cannot share an empty playlist!</string>
    <string name="playlist_bottom_sheet_placeholder">Playlist is empty</string>
    <string name="player_title">Player</string>
    <string name="player_add_track_to_playlist">Add track to Playlist</string>
    <string name="player_track_added_to_playlist_message">Added to Playlist \"%s\"</string>
    <string name="player_bottom_sheet_placeholder">No playlists\n or the track has been added to all existing playlists.</string>

    <!-- Permission messages -->
    <string name="permission_denied_message">Gallery access denied</string>
    <string name="permission_rationale_title">Photo access required</string>
    <string name="permission_rationale_message">To select playlist cover we need access to your photos.</string>
    <string name="permission_settings_title">Permission required</string>
    <string name="permission_settings_message">You denied permission with \"Don\'t ask again\". Please enable access in app settings.</string>
    <string name="settings">Settings</string>
    <string name="grant">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>

    <!-- Error messages -->
    <string name="error_loading_image">Error loading image</string>
    <string name="image_selected">Image selected</string>

    <string name="bullet_prefix" translatable="false">\u00A0•\u00A0%s</string>
    <string name="exit_confirmation_message">All unsaved data will be lost</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>