<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    tools:context=".SettingsActivity"
    style="@style/LinearLayoutStyle">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/settings_button"
        app:navigationIcon="@drawable/ic_back"
        app:titleTextColor="@color/text"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/offset_20"
        android:paddingHorizontal="@dimen/offset_10"
        android:text="@string/settings_dark_theme_item"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"
        android:thumbTintMode="screen"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_share"
        android:paddingVertical="@dimen/offset_20"
        android:paddingHorizontal="@dimen/offset_10"
        android:text="@string/settings_share_app_item"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_support"
        android:paddingVertical="@dimen/offset_20"
        android:paddingHorizontal="@dimen/offset_10"
        android:text="@string/settings_support_item"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_forward"
        android:paddingVertical="@dimen/offset_20"
        android:paddingHorizontal="@dimen/offset_10"
        android:text="@string/settings_user_agreement_item"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"/>

</LinearLayout>