<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaFragment">

    <!-- SearchFragment -->
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.practicum.playlistmaker.search.presentation.view.SearchFragment"
        android:label="@string/search_tab"
        tools:layout="@layout/fragment_search">

        <!-- Переход из SearchFragment в MediaFragment -->
        <action
            android:id="@+id/action_searchFragment_to_mediaFragment"
            app:destination="@id/mediaFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <!-- Переход из SearchFragment в SettingsFragment -->
        <action
            android:id="@+id/action_searchFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <!-- Переход из SearchFragment в PlayerFragment -->
        <action
            android:id="@+id/action_searchFragment_to_playerFragment"
            app:destination="@id/playerFragment" />

    </fragment>

    <!-- MediaFragment -->
    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.practicum.playlistmaker.media.presentation.view.MediaFragment"
        android:label="@string/media_library_tab"
        tools:layout="@layout/fragment_media">

        <!-- Переход из MediaFragment в SearchFragment -->
        <action
            android:id="@+id/action_mediaFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <!-- Переход из MediaFragment в SettingsFragment -->
        <action
            android:id="@+id/action_mediaFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <!-- Переход из MediaFragment в AddPlaylistFragment -->
        <action
            android:id="@+id/action_mediaFragment_to_addPlaylistFragment"
            app:destination="@id/addPlaylistFragment" />

        <!-- Переход из MediaFragment в PlayerFragment -->
        <action
            android:id="@+id/action_mediaFragment_to_playerFragment"
            app:destination="@id/playerFragment" />

        <!-- Переход из MediaFragment в PlaylistFragment -->
        <action
            android:id="@+id/action_mediaFragment_to_playlistFragment"
            app:destination="@id/playlistFragment" />
    </fragment>

    <!-- SettingsFragment -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.practicum.playlistmaker.settings.presentation.view.SettingsFragment"
        android:label="@string/settings_tab"
        tools:layout="@layout/fragment_settings">

        <!-- Переход из SettingsFragment в SearchFragment -->
        <action
            android:id="@+id/action_settingsFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <!-- Переход из SettingsFragment в MediaFragment -->
        <action
            android:id="@+id/action_settingsFragment_to_mediaFragment"
            app:destination="@id/mediaFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- AddPlaylistFragment -->
    <fragment
        android:id="@+id/addPlaylistFragment"
        android:name="com.practicum.playlistmaker.listmaker.presentation.view.AddPlaylistFragment"
        android:label="@string/add_new_playlist_title"
        tools:layout="@layout/fragment_add_playlist" >

        <argument
            android:name="playlistId"
            app:argType="long" />

        <!-- Переход из AddPlaylistFragment в MediaFragment -->
        <action
            android:id="@+id/action_addPlaylistFragment_to_mediaFragment"
            app:destination="@id/mediaFragment" />
    </fragment>

    <!-- PlaylistFragment -->
    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.practicum.playlistmaker.playlist.presentation.view.PlaylistFragment"
        android:label="@string/playlist_title"
        tools:layout="@layout/fragment_playlist" >

        <argument
            android:name="playlistId"
            app:argType="long" />

        <!-- Переход из PlaylistFragment в MediaFragment -->
        <action
            android:id="@+id/action_playlistFragment_to_mediaFragment"
            app:destination="@id/mediaFragment" />

        <!-- Переход из PlaylistFragment в PlayerFragment -->
        <action
            android:id="@+id/action_playlistFragment_to_playerFragment"
            app:destination="@id/playerFragment" />

        <!-- Переход из PlaylistFragment в AddPlaylistFragment -->
        <action
            android:id="@+id/action_playlistFragment_to_addPlaylistFragment"
            app:destination="@id/addPlaylistFragment" />
    </fragment>

    <!-- PlayerFragment -->
    <fragment
        android:id="@+id/playerFragment"
        android:name="com.practicum.playlistmaker.player.presentation.view.PlayerFragment"
        android:label="@string/player_title"
        tools:layout="@layout/fragment_player">

        <argument
            android:name="trackParcel"
            app:argType="com.practicum.playlistmaker.common.presentation.model.TrackParcel" />

        <!-- Переход из PlayerFragment в SearchFragment -->
        <action
            android:id="@+id/action_playerFragment_to_searchFragment"
            app:destination="@id/searchFragment" />

        <!-- Переход из PlayerFragment в AddPlaylistFragment -->
        <action
            android:id="@+id/action_playerFragment_to_addPlaylistFragment"
            app:destination="@id/addPlaylistFragment" />

    </fragment>

</navigation>